<resources>
    <string name="app_name">Nutrition Tracker</string>
    <string name="logo">Logo</string>
    <string name="sign_up_prompt">Don\'t have an account? <u>SignUp</u></string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="Phone">Phone Number</string>
    <string name="Height">Height (ft)</string>
    <string name="Weight">Weight (lb)</string>
    <string name="Calorie">Calorie Goal</string>
    <string name="SignUp">Sign Up</string>
    <string name="user_setting">User Settings</string>
    <string name="NotificationTime">Notification Time</string>
    <string name="NotificationTimeSummary">Adjust when to get notifications</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="Age">Age</string>
    <string name="Sex">Sex</string>
    <string name="PersonalInfoCategory">Personal Information</string>
    <string name="NutritionCategory">Nutrition Settings</string>
    <string name="WorkoutDays">Workout Days in a Week (30+ Minutes)</string>
    <string name="WeightGoal">Weight Goal</string>
    <string name="search_default">Enter Food Name and Amount</string>
    <string name="search_button">Search</string>
    <string name="adddata_button">Add New Food</string>
    <string name="add_button">Add</string>
    <string name="channel_name">NutritionTracker</string>
    <string name="channel_description">All Notifications</string>
</resources>
