<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#CCF2FC">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="97dp"
            android:layout_height="97dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/login_account_24"
            app:layout_constraintBottom_toTopOf="@+id/UserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/UserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:hint="@string/Username"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailSignUpEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/UserName" />

        <EditText
            android:id="@+id/passwordSignUpEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/emailSignUpEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/passwordConfirmEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/ConfirmPass"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignUpEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/phoneSignUpEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Phone"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Height"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/phoneSignUpEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Weight"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/heightEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/calorieEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Calorie"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/weightEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/SignUp"
            android:backgroundTint="#0096FF"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/calorieEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
