<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/foodEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/search_default"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="118dp" />

    <Button
        android:id="@+id/adddatabutton"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:backgroundTint="#0096FF"
        android:text="@string/add_button"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="643dp" />

    <ScrollView
        android:layout_width="407dp"
        android:layout_height="367dp"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="251dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/foodName"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/calorieAmount"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:backgroundTint="#0096FF"
        android:text="@string/search_button"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="183dp" />

</androidx.constraintlayout.widget.ConstraintLayout>